i wanted to init text from codemirror instances, but it breaks it

--- a/client/index.html
+++ b/client/index.html
@@ -316,9 +316,8 @@ var ws_url = "ws://" + window.location.host;
 
 // var col;
 // codemirror/mergeview globals:
-var value = 'This editor affects the simulation';
-
-var orig1 = 'This editor pulls code in from other commits/branches';
+var value;
+var orig1;
 var dv;
 let panes = 2;
 let highlight = true;
