change height of integrated terminal

--- a/client/index.html
+++ b/client/index.html
@@ -281,7 +281,7 @@
 <script>document.domain = document.domain;
 </script>
 <!-- <iframe src="http://192.168.0.27:8081" width=100%>Windows Machine</iframe> -->
-<iframe src="http://localhost:8081" width=100%></iframe>
+<iframe src="http://localhost:8081" width=100% height=40%></iframe>
 <!-- Chat and System Logs -->
     <!-- <div class="chatFooter">
          <div id="chatHeader">Chat and System Messages
