added colors to the send buttons

--- a/client/index.html
+++ b/client/index.html
@@ -268,24 +268,21 @@
     <!-- <div id="gitgraph" style="text-align: left; padding-left: 10px"></div> -->
 </div>
 <!-- Send Code -->
-<table width="80%">
+<table>
         <tr>
             <th style="text-align:left">
-                <button onclick="sendLeftCode()">Send Left Code</button>
+                <button onclick="sendLeftCode()" style="background-color:#d70">Send Left Code</button>
             </th>
             <th style="text-align:right">
-                <button onclick="sendRightCode()">Send Right Code</button>
+                <button onclick="sendRightCode()" style="background-color:rgb(0, 221, 166)">Send Right Code</button>*NOTE: Cmd-S/Ctrl-S will send code of focused editor
             </th>
         </tr>
 </table>
 <script>document.domain = document.domain;
 </script>
 <!-- <iframe src="http://192.168.0.27:8081" width=100%>Windows Machine</iframe> -->
-<<<<<<< HEAD
-<iframe src="http://localhost:8081" width=100% height=40%></iframe>
-=======
-<iframe src="http://192.168.0.27:8088/terminal" width=100%></iframe>
->>>>>>> 7e8ba0621dfec5ab20825c8ff339395d9e26987b
+
+<iframe src="http://192.168.0.27:8088/terminal" width=100% height=30%></iframe>
 <!-- Chat and System Logs -->
     <!-- <div class="chatFooter">
          <div id="chatHeader">Chat and System Messages
