added a terminal to the state editor

--- a/client/state.html
+++ b/client/state.html
@@ -127,6 +127,15 @@ rgb(199, 0, 57) --> */
                             Notes: saving state.h also triggers a rebuild of cpp2json. This bootstraps an issue where cpp2json seems to only provide parameter names that were present at the most-recent build.
                         </td>
                     </tr>
+                    <tr>
+                        <td>
+                            <script>document.domain = document.domain;
+                            </script>
+                            <!-- <iframe src="http://192.168.0.27:8081" width=100%>Windows Machine</iframe> -->
+                            
+                            <iframe src="http://192.168.0.27:8088/terminal" width=100% height=200px></iframe>
+                        </td>
+                    </tr>
                 
             </table>
         </td>
@@ -141,22 +150,6 @@ rgb(199, 0, 57) --> */
                     </tr>
                 </tbody>
             </table>
-        </td>
-    </tr>
-    <tr>
-        <td>
-            Errors/Warnings from Server
-        </td>
-
-    <tr height="20%">
-        <td>
-            <div id="serverWarnings" overflow="auto">
-
-        </td>
-        <td>
-            <div id="otherParams" overflow="auto">
-                    </div>
-            <!-- <li id="state"></li> -->
         </td>
     </tr>
 
