--- a/client/state.html
+++ b/client/state.html
@@ -624,6 +624,14 @@ EventUtil.preventDefault(event);
 
 }
 
+function noScroll() {
+    $(".cm-number").scrollLeft(0);
+    window.scrollTo( 0, 0 );
+    window.scrollX(0);
+    window.scrollY(0);
+}
+
+
 var cursorY;
 var cursorX;
 
@@ -633,13 +641,21 @@ $("#stateh_source").on("mouseover", function (){
     $(".cm-number").hover(function(event){
         EventUtil.addHandler(document,'mousewheel', onWheel);
         EventUtil.addHandler(document,'DOMMouseScroll', onWheel);
+        
         $(".cm-number").filter(EventUtil.getTarget(event)).css("background-color", "mediumblue");
+        $(".cm-number").filter(EventUtil.getTarget(event)).css("overflow-x", "hidden");
+        $(".cm-number").filter(EventUtil.getTarget(event)).css("overflow-y", "hidden");
+
+
+        EventUtil.addHandler(document, 'scroll', noScroll);
     },
     function(){
             EventUtil.removeHandler(document, 'mousewheel', onWheel);
             EventUtil.removeHandler(document, 'DOMMouseScroll', onWheel);
 
+
             $(".cm-number").filter(EventUtil.getTarget(event)).removeAttr("style");
+            EventUtil.removeHandler(document, 'scroll', noScroll);
         });
     });
 });
