Trying to fix scroll for mac - Alexander

--- a/client/state.html
+++ b/client/state.html
@@ -648,6 +648,32 @@ $("#stateh_source").on("mouseover", function (){
         
         $(".cm-number").filter(EventUtil.getTarget(event)).css("background-color", "mediumblue");
 
+         var $this = $(this),
+        scrollTop = this.scrollTop,
+        scrollHeight = this.scrollHeight,
+        height = $this.height(),
+        delta = (event.type == 'DOMMouseScroll' ?
+            event.originalEvent.detail * -40 :
+            event.originalEvent.wheelDelta),
+        up = delta > 0;
+
+    var prevent = function() {
+        event.stopPropagation();
+        event.preventDefault();
+        event.returnValue = false;
+        return false;
+    }
+
+    if (!up && -delta > scrollHeight - height - scrollTop) {
+        // Scrolling down, but this will take us past the bottom.
+        $this.scrollTop(scrollHeight);
+        return prevent();
+    } else if (up && delta > scrollTop) {
+        // Scrolling up, but this will take us past the top.
+        $this.scrollTop(0);
+        return prevent();
+    }
+
     },
     function(){
             EventUtil.removeHandler(document, 'mousewheel', onWheel);
