--- a/client/state.html
+++ b/client/state.html
@@ -646,33 +646,8 @@ $("#stateh_source").on("mouseover", function (){
         EventUtil.addHandler(document,'mousewheel', onWheel);
         EventUtil.addHandler(document,'DOMMouseScroll', onWheel);
         
-        $(".cm-number").filter(EventUtil.getTarget(event)).css("background-color", "mediumblue");
-
-         var $this = $(this),
-        scrollTop = this.scrollTop,
-        scrollHeight = this.scrollHeight,
-        height = $this.height(),
-        delta = (event.type == 'DOMMouseScroll' ?
-            event.originalEvent.detail * -40 :
-            event.originalEvent.wheelDelta),
-        up = delta > 0;
-
-    var prevent = function() {
-        event.stopPropagation();
-        event.preventDefault();
-        event.returnValue = false;
-        return false;
-    }
-
-    if (!up && -delta > scrollHeight - height - scrollTop) {
-        // Scrolling down, but this will take us past the bottom.
-        $this.scrollTop(scrollHeight);
-        return prevent();
-    } else if (up && delta > scrollTop) {
-        // Scrolling up, but this will take us past the top.
-        $this.scrollTop(0);
-        return prevent();
-    }
+        $(".cm-number").filter(EventUtil.getTarget(event)).css("background-color", "mediumblue"); 
+        $(this).scrollTop($(this).scrollTop()-e.originalEvent.wheelDeltaY);
 
     },
     function(){
