comment out webterminal

--- a/client/state.html
+++ b/client/state.html
@@ -119,7 +119,7 @@ rgb(199, 0, 57) --> */
                     </tr>
                     <tr>
                         <td > 
-                            <div id="stateh_source"></div>
+                            <div height=2000px id="stateh_source"></div>
                         </td>
                     </tr>
                     <tr>
